clear index.html, fix package issue

--- a/backend/static/styles/form.css
+++ b/backend/static/styles/form.css
@@ -1,6 +1,7 @@
 .complex-form {
   margin-top: 10px;
-  margin-right: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
   border-radius: 10px;
   background: #ffffff;
   border: 2px #8fabc3 solid;
