--- a/backend/static/styles/main.css
+++ b/backend/static/styles/main.css
@@ -2,36 +2,20 @@ html {
   overflow: -moz-scrollbars-vertical;
 }
 
+*{
+  margin: 0;
+  padding : 0
+}
+
 body {
   background: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   color: #3c3d3f;
-  text-align: left;
-  max-width: 800px;
-  margin: auto;
-}
-
-header {
-  display: flex;
-  margin-top: 36px;
-  height: 64px;
-  justify-content: flex-end;
-}
-
-header #title {
-  color: black;
-  text-decoration: none;
+  text-align: center;
+  align-items: center;
+  padding: 0px;
   margin: 0px;
-  width: 100%;
-  font-size: 48px;
-}
-
-.header-btn {
-  text-decoration: none;
-  font-size: 16px;
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 footer {
