--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
   <!-- you can modify internal routing in app-routing.module.ts -->
   <a routerLink="/" id="title">Webtama</a>
   <a routerLink="/sign-in" id="signin-button" class="btn header-btn hidden"
-    >Sign in or Sign up</a
+    >Sign in</a
   >
   <a (click)="signOut()" id="signout-button" class="btn header-btn hidden"
     >Sign out</a
