--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Onitama</title>
+    <link href="game.component.scss" rel="stylesheet" type="text/css" />
+    <link href="main.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <h1 id="p1Title">Player 1</h1>
@@ -59,7 +61,7 @@
       <a href="/credits.html">credits</a>
     </footer>
 
-    <script type="text/javascript" src="./js/api-service.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <!-- <script type="text/javascript" src="./js/api-service.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script> -->
   </body>
 </html>
