--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,15 +1,49 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --darkBase: #2c2b30;
+  --Base: #4f4f51;
+  --textColor: #d6d6d6;
+  --lightBase: #f2c4ce;
+  --mainColor: #f58f7c;
+}
+
 html {
   overflow: -moz-scrollbars-vertical;
+  background: var(--mainColor) !important;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-  background: #ffffff;
+  background-color: var(--darkBase) !important;
+  max-width: 85%;
+  height: 160vh;
+  border-radius: 2px;
+  margin: auto;
+  align-items: center;
+  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-  color: #3c3d3f;
-  text-align: left;
-  margin: 0px;
+}
+
+h1 {
+  color: var(--textColor);
+  font-size: 2em;
+  margin: 5%;
+  padding: 0;
+  text-align: center;
+}
+
+footer {
+  margin-top: 20px;
+  text-align: center;
+  color: var(--mainColor) !important;
+}
+
+a {
+  color: var(--mainColor) !important;
 }
 
 ::after,
