feat: game functionality

--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -12,15 +12,13 @@
     <!-- set up the onitama board, 5x5 -->
     <table>
       <tr>
-        <td data-row="5" data-col="1"><p class="pawn aTeam"></p></td>
+        <td data-row="5" data-col="1"></td>
         <td data-row="5" data-col="2" class="td2">
-          <p class="pawn aTeam"></p>
+          <!-- <p class="pawn aTeam"></p> -->
         </td>
-        <td data-row="5" data-col="3"><p class="king aTeam"></p></td>
-        <td data-row="5" data-col="4" class="td2">
-          <p class="pawn aTeam"></p>
-        </td>
-        <td data-row="5" data-col="5"><p class="pawn aTeam"></p></td>
+        <td data-row="5" data-col="3"></td>
+        <td data-row="5" data-col="4" class="td2"></td>
+        <td data-row="5" data-col="5"></td>
       </tr>
       <tr>
         <td data-row="4" data-col="1" class="td2"></td>
@@ -44,15 +42,11 @@
         <td data-row="2" data-col="5" class="td2"></td>
       </tr>
       <tr>
-        <td data-row="1" data-col="1"><p class="pawn bTeam"></p></td>
-        <td data-row="1" data-col="2" class="td2">
-          <p class="pawn bTeam"></p>
-        </td>
-        <td data-row="1" data-col="3"><p class="king bTeam"></p></td>
-        <td data-row="1" data-col="4" class="td2">
-          <p class="pawn bTeam"></p>
-        </td>
-        <td data-row="1" data-col="5"><p class="pawn bTeam"></p></td>
+        <td data-row="1" data-col="1"></td>
+        <td data-row="1" data-col="2" class="td2"></td>
+        <td data-row="1" data-col="3"></td>
+        <td data-row="1" data-col="4" class="td2"></td>
+        <td data-row="1" data-col="5"></td>
       </tr>
     </table>
     <h1 id="p2Title">Player 2</h1>
