--- a/frontend/src/app/pages/game/game.component.scss
+++ b/frontend/src/app/pages/game/game.component.scss
@@ -28,7 +28,7 @@ td {
   height: 2.5vw;
   margin: auto;
   background-color: black;
-  border: 2px solid white;
+  border: 3.5px solid darkslategrey;
   border-radius: 50%;
 }
 
@@ -38,8 +38,12 @@ td {
   margin: auto;
   padding: 1;
   background-color: black;
-  border: 4px solid gold;
-  border-radius: 50%;
+  border: 4px solid darkslategrey;
+  border-radius: 0;
+}
+
+.selected {
+  border: 4.5px solid gold;
 }
 
 .aTeam {
