change login page style

--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Onitama</title>
     <link href="game.component.scss" rel="stylesheet" type="text/css" />
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <!--link href="main.css" rel="stylesheet" type="text/css" />-->
   </head>
   <body>
     <h1 id="p1Title">Player 1</h1>
