--- a/frontend/src/app/pages/game/main.css
+++ b/frontend/src/app/pages/game/main.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --darkBase: #2c2b30;
   --Base: #4f4f51;
   --textColor: #d6d6d6;
@@ -44,4 +44,4 @@ footer {
 
 a {
   color: var(--mainColor) !important;
-}
+} */
