--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -16,7 +16,7 @@ html {
 body {
   background-color: var(--darkBase) !important;
   max-width: 85%;
-  height: 160vh;
+  height: 110%;
   border-radius: 2px;
   margin: auto;
   align-items: center;
