feat:almost done

--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -14,7 +14,7 @@
       <tr>
         <td data-row="5" data-col="1"></td>
         <td data-row="5" data-col="2" class="td2">
-          <!-- <p class="pawn aTeam"></p> -->
+          <!-- <p data-x="1" data-y="1" class="pawn aTeam"></p> -->
         </td>
         <td data-row="5" data-col="3"></td>
         <td data-row="5" data-col="4" class="td2"></td>
