--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -54,7 +54,7 @@ header #title {
   padding: 10px 20px 10px 20px;
 }
 
-.btn:hover {
+.btn {
   background: #3c3d3f;
   color: #ffffff;
   cursor: pointer;
