feat: style fix

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,7 +8,7 @@
 
 html {
   overflow: -moz-scrollbars-vertical;
-  background: var(--mainColor) !important;
+  background: var(--mainColor);
   height: 100%;
   width: 100%;
 }
