--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -3,12 +3,13 @@ header {
   height: 64px;
   width: 100%;
   background-color: #12cec5;
-  box-shadow:0 1px 1px #ccc;
+  box-shadow: 0 1px 1px #ccc;
   justify-content: flex-end;
-  -webkit-transition:top 0.3s;
-  transition:top 0.3s;
+  -webkit-transition: top 0.3s;
+  transition: top 0.3s;
   z-index: 1;
   position: relative;
+  align-items: center;
 }
 
 header #title {
