Removed the play game button

--- a/frontend/src/app/pages/index/index.component.html
+++ b/frontend/src/app/pages/index/index.component.html
@@ -1,2 +1,2 @@
 <p id="error-box">{{ error }}</p>
-<button (click)="goToGame()">Play Game</button>
+<!-- <button (click)="goToGame()">Play Game</button> -->
