--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: #2c2b30">
+<html class="gamehtml">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
