--- a/frontend/src/app/pages/game/game.component.scss
+++ b/frontend/src/app/pages/game/game.component.scss
@@ -125,3 +125,23 @@ td {
   color: black;
   outline: none;
 }
+
+body {
+  background-color: var(--darkBase) !important;
+  max-width: 85%;
+  height: 95vh;
+  border-radius: 2px;
+  margin: auto;
+  align-items: center;
+  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+.gamehtml {
+  background-color: #2c2b30;
+  height: 110vh;
+}
