--- a/frontend/src/app/pages/lobby/lobby.component.scss
+++ b/frontend/src/app/pages/lobby/lobby.component.scss
@@ -94,14 +94,14 @@ h1 {
 }
 
 .joinButton {
-  width: 3vw;
-  min-width: 40px;
-  height: 4vh;
+  width: 5vw !important;
+  min-width: 35px !important;
+  height: 4vh !important;
   margin-right: 1px;
   display: inline;
   position: unset;
   margin-left: 70%;
-  margin-right: 1%;
+  // margin-right: 0.5%;
   margin-top: 1%;
   white-space: normal;
 }
