--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -8,8 +8,8 @@
       <app-logout-button></app-logout-button>
     </ng-container>
     <ng-template #unAuthenticated>
-      <app-signup-button></app-signup-button>
-      <app-login-button></app-login-button>
+      <app-signup-button id="signUp"></app-signup-button>
+      <app-login-button id="signIn"></app-login-button>
     </ng-template>
   </div>
 </header>
