--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -8,7 +8,7 @@
     <!--link href="main.css" rel="stylesheet" type="text/css" />-->
   </head>
   <body>
-    <h1 id="p1Title">Player 1</h1>
+    <h1 id="p1Title">Empty</h1>
     <!-- set up the onitama board, 5x5 -->
     <table>
       <tr>
@@ -49,7 +49,7 @@
         <td data-row="1" data-col="5"></td>
       </tr>
     </table>
-    <h1 id="p2Title">Player 2</h1>
+    <h1 id="p2Title">Empty</h1>
 
     <footer>
       <a href="/credits.html">credits</a>
