--- a/frontend/src/app/pages/lobby/lobby.component.html
+++ b/frontend/src/app/pages/lobby/lobby.component.html
@@ -7,6 +7,7 @@
   <h1>Choose a game room</h1>
   <div id="lobbyInfo"></div>
   <body>
+    <button class="kiaButton" id="matchmake">Play</button>
     <button class="kiaButton" id="roomCreate">Create A Room</button>
     <div id="lobbyList"></div>
   </body>
