--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -9,13 +9,10 @@
   </head>
   <body>
     <h1 id="p1Title">Empty</h1>
-    <!-- set up the onitama board, 5x5 -->
     <table>
       <tr>
         <td data-row="5" data-col="1"></td>
-        <td data-row="5" data-col="2" class="td2">
-          <!-- <p data-x="1" data-y="1" class="pawn aTeam"></p> -->
-        </td>
+        <td data-row="5" data-col="2" class="td2"></td>
         <td data-row="5" data-col="3"></td>
         <td data-row="5" data-col="4" class="td2"></td>
         <td data-row="5" data-col="5"></td>
@@ -50,12 +47,17 @@
       </tr>
     </table>
     <h1 id="p2Title">Empty</h1>
+    <div id="cards">
+      <button class="card kiaButton" id="card1" style="float: left">
+        NULL
+      </button>
+      <button class="card kiaButton" id="card2" style="float: right">
+        NULL
+      </button>
+    </div>
 
     <footer>
       <a href="/credits.html">credits</a>
     </footer>
-
-    <!-- <script type="text/javascript" src="./js/api-service.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script> -->
   </body>
 </html>
