--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -48,12 +48,8 @@
     </table>
     <h1 id="p2Title">Empty</h1>
     <div id="cards">
-      <button class="card kiaButton" id="card1" style="float: left">
-        NULL
-      </button>
-      <button class="card kiaButton" id="card2" style="float: right">
-        NULL
-      </button>
+      <button class="card" id="card1" style="float: left">NULL</button>
+      <button class="card" id="card2" style="float: right">NULL</button>
     </div>
 
     <footer>
