--- a/frontend/src/app/pages/lobby/lobby.component.html
+++ b/frontend/src/app/pages/lobby/lobby.component.html
@@ -7,8 +7,10 @@
   <h1>Choose a game room</h1>
   <div id="lobbyInfo"></div>
   <body>
-    <button class="kiaButton" id="matchmake">Play</button>
-    <button class="kiaButton" id="roomCreate">Create A Room</button>
+    <div>
+      <button class="kiaButton" id="matchmake">Play</button>
+      <button class="kiaButton" id="roomCreate">Create A Room</button>
+    </div>
     <div id="lobbyList"></div>
   </body>
 </html>
