--- a/frontend/src/app/pages/game/game.component.scss
+++ b/frontend/src/app/pages/game/game.component.scss
@@ -4,15 +4,18 @@
   --textColor: #d6d6d6;
   --lightBase: #f2c4ce;
   --mainColor: #f58f7c;
+  overflow: hidden;
+  -webkit-scrollbar {
+    display: none;
+  }
 }
 
 table {
   border: 3px solid white;
 }
 td {
-  width: 6vw;
-  height: 6vw;
-  /* center the pieces*/
+  width: 5.5vw;
+  height: 5.5vw;
   vertical-align: middle;
   text-align: center;
   margin: 0;
@@ -56,18 +59,30 @@ td {
 
 #cards {
   width: 90%;
-  height: 20%;
+  padding: 1%;
   background-color: var(--Base);
   color: var(--lightBase);
-  border: 2px solid var(--lightBase);
+  border: 2.5px solid var(--lightBase);
+  border-radius: 0.4em;
 }
 
 .card {
   width: 47%;
-  height: 95%;
+  height: 90%;
+  min-height: 7em;
+  max-height: 13em;
   padding: 1%;
   border-radius: 1em;
   border-color: var(--lightBase);
+
+  display: inline;
+  color: white;
+  background-color: var(--mainColor);
+  font-size: 120%;
+  border: 1.5px solid;
+  transition-duration: 0.25s;
+  box-shadow: 0 3px #999;
+  cursor: pointer;
 }
 
 /* Interact.css*/
@@ -77,27 +92,12 @@ h2 {
   visibility: hidden;
 }
 
-.kiaButton {
-  display: inline;
-  color: white;
-  background-color: var(--mainColor);
-  border-color: #0f1225;
-  font-size: 120%;
-  margin: 1%;
-  padding: 1%, 0;
-  border: 1.5px solid;
-  transition-duration: 0.25s;
-  box-shadow: 0 3px #999;
-  cursor: pointer;
-}
-
-.kiaButton:hover,
 .card:hover {
   background-color: var(--darkBase);
   color: var(--mainColor);
+  border-color: var(--lightBase);
 }
 
-.kiaButton:active,
 .card:active {
   box-shadow: 0 1px #666;
   transform: translateY(3px);
