--- a/frontend/src/app/pages/lobby/lobby.component.scss
+++ b/frontend/src/app/pages/lobby/lobby.component.scss
@@ -64,23 +64,30 @@ h1 {
 }
 
 .kiaButton {
+  display: inline;
   color: white;
   background-color: var(--mainColor);
-  /* center the button */
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
   border-color: #0f1225;
   font-size: 84%;
-  width: 15vw;
-  height: 5vh;
-  margin: 1%, auto;
-  padding: 1%, 0;
   border-radius: 12em;
   border: 1.5px solid;
   transition-duration: 0.35s;
   box-shadow: 0 3px #999;
   cursor: pointer;
+}
+
+#matchmake,
+#roomCreate {
+  width: 15vw;
+  height: 5vh;
+}
+
+#matchmake {
+  float: left;
+}
+
+#roomCreate {
+  float: right;
 }
 
 .kiaButton:hover {
@@ -94,15 +101,13 @@ h1 {
 }
 
 .joinButton {
-  width: 3vw;
+  width: 5vw;
   min-width: 40px;
   height: 4vh;
-  margin-right: 1px;
+  margin-right: 1%;
   display: inline;
   position: unset;
-  margin-left: 70%;
-  margin-right: 1%;
-  margin-top: 1%;
+  float: right;
   white-space: normal;
 }
 
