--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -182,18 +182,25 @@ a {
   border: 2px solid black;
 }
 
-.btn {
-  border-radius: 10px;
-  text-align: center;
-  font-size: 20px;
-  color: #3c3d3f;
-  background: #ffffff;
-  border: 2px solid black;
-  padding: 10px 20px 10px 20px;
+.btn:hover {
+  background-color: white;
+  color: var(--mainColor);
 }
 
-.btn:hover {
-  background: #3c3d3f;
-  color: #ffffff;
+.btn:active {
+  box-shadow: 0 1px #666;
+  transform: translateY(3px);
+}
+
+.btn {
+  display: inline;
+  color: white;
+  background-color: var(--mainColor);
+  border-color: #0f1225;
+  font-size: 84%;
+  border-radius: 12em;
+  border: 1.5px solid;
+  transition-duration: 0.35s;
+  box-shadow: 0 3px #999;
   cursor: pointer;
 }
