check out implemented

--- a/frontend/src/app/pages/lobby/lobby.component.html
+++ b/frontend/src/app/pages/lobby/lobby.component.html
@@ -12,5 +12,8 @@
       <button class="kiaButton" id="roomCreate">Create A Room</button>
     </div>
     <div id="lobbyList"></div>
+    <button (click)="checkout()">
+      Premium account
+    </button>
   </body>
 </html>
