--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -46,6 +46,7 @@
       </tr>
     </table>
     <h1 id="p2Title">Empty</h1>
+    <span id="crowdJeer"></span>
     <div id="cards">
       <button class="card" id="card1" style="float: left">NULL</button>
       <button class="card" id="card2" style="float: right">NULL</button>
