feat: card changes

--- a/frontend/src/app/pages/game/game.component.html
+++ b/frontend/src/app/pages/game/game.component.html
@@ -48,8 +48,8 @@
     <h1 id="p2Title">Empty</h1>
     <h2 id="crowdJeer"></h2>
     <div id="cards">
-      <button class="card" id="card1" style="float: left">NULL</button>
-      <button class="card" id="card2" style="float: right">NULL</button>
+      <button class="card" id="card1" style="float: left"></button>
+      <button class="card" id="card2" style="float: right"></button>
     </div>
 
     <footer>
