--- a/frontend/src/app/pages/lobby/lobby.component.html
+++ b/frontend/src/app/pages/lobby/lobby.component.html
@@ -12,8 +12,7 @@
       <button class="kiaButton" id="roomCreate">Create A Room</button>
     </div>
     <div id="lobbyList"></div>
-    <button (click)="checkout()">
-      Premium account
-    </button>
+    <button class="kiaButton" (click)="checkout()">Premium account</button>
+    <div id="colourPicker"></div>
   </body>
 </html>
