--- a/frontend/src/app/pages/lobby/lobby.component.html
+++ b/frontend/src/app/pages/lobby/lobby.component.html
@@ -12,7 +12,10 @@
       <button class="kiaButton" id="roomCreate">Create A Room</button>
     </div>
     <div id="lobbyList"></div>
-    <button class="kiaButton" (click)="checkout()">Premium account</button>
-    <div id="colourPicker"></div>
+    <ng-container *ngIf="notPremium$; else isPremium">
+      <button class="kiaButton" (click)="checkout()" >Premium account</button>
+    </ng-container>
+    <ng-template #isPremium>
+    </ng-template> 
   </body>
 </html>
