--- a/frontend/src/app/pages/game/game.component.scss
+++ b/frontend/src/app/pages/game/game.component.scss
@@ -95,6 +95,12 @@ h2 {
   margin-bottom: 2%;
 }
 
+#crowdJeer {
+  border: 2px solid white;
+  border-radius: 1em;
+  width: 90%;
+}
+
 .card:hover {
   background-color: var(--darkBase);
   color: var(--lightBase);
